Move from naive frontend implementation to a mature LLVM lifting (#19)

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,17 @@ build/
 .vscode/
 codes_86/
 _deps/
-*.dSYM/
+
+# LLVM generated files
+*.ll
+*.bc
+*.s
+
+# docs
+docs/html/
+
+# machine binaries
+.DS_Store
+
+# becnhmarks
+benchmarking/
