--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(TransISA VERSION 0.0.0)
 
-# Set C++ standard
+# C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -10,17 +10,24 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 if(APPLE)
-  # Use a CMake variable instead of shell command
-  include_directories(SYSTEM "${LLVM_INCLUDE_DIR}/c++/v1")
-  link_directories("${LLVM_LIB_DIR}")
   add_compile_options(-stdlib=libc++)
   add_link_options(-stdlib=libc++)
 endif()
 
-# include directory
-include_directories(include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 # Add subdirectories
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(examples)
+
+# Doxygen
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+  add_custom_target(
+    docs
+    COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_SOURCE_DIR}/docs/Doxyfile
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/docs
+    COMMENT "Generating API documentation with Doxygen"
+    VERBATIM)
+endif()
