--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,40 +2,45 @@ name: Run Exhaustive Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   run-tests:
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]  # Run on both Linux and macOS
         include:
           - os: ubuntu-latest
-            target: x86_64
+            name: ubuntu
           - os: macos-latest
-            target: arm64
-    runs-on: ${{ matrix.os }}
+            name: macos
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Install dependencies (Ubuntu)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y cmake libgtest-dev ninja-build llvm-19 llvm-19-dev clang-19 lld-19 lldb-19
-          
-          echo "LLVM_DIR=/usr/lib/llvm-19/cmake" >> $GITHUB_ENV
+          sudo apt-get install -y wget gnupg lsb-release
+
+          wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+          sudo add-apt-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-19 main"
+          sudo apt-get update
+
+          sudo apt-get install -y \
+            cmake ninja-build \
+            llvm-19 llvm-19-dev llvm-19-tools \
+            clang-19 clang-tools-19 \
+            lld-19 libc++-19-dev libc++abi-19-dev
+
           echo "CC=/usr/bin/clang-19" >> $GITHUB_ENV
           echo "CXX=/usr/bin/clang++-19" >> $GITHUB_ENV
-          echo "CMAKE_AR=/usr/bin/llvm-ar-19" >> $GITHUB_ENV
-          echo "CMAKE_RANLIB=/usr/bin/llvm-ranlib-19" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=/usr/lib/llvm-19/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+          echo "LLVM_DIR=/usr/lib/llvm-19/lib/cmake/llvm" >> $GITHUB_ENV
           echo "PATH=/usr/lib/llvm-19/bin:$PATH" >> $GITHUB_ENV
 
       - name: Install dependencies (macOS)
@@ -43,63 +48,61 @@ jobs:
         run: |
           brew update
           brew install cmake ninja llvm@19
-          
-          # Store LLVM path for easy reference
-          LLVM_PREFIX=$(brew --prefix llvm@19)
-          
-          # Set up environment variables
-          echo "LLVM_DIR=${LLVM_PREFIX}/lib/cmake/llvm" >> $GITHUB_ENV
+
+          LLVM_PREFIX="$(brew --prefix llvm@19)"
+          SDKROOT="$(xcrun --sdk macosx --show-sdk-path)"
+
+          echo "LLVM_PREFIX=${LLVM_PREFIX}" >> $GITHUB_ENV
+          echo "SDKROOT=${SDKROOT}" >> $GITHUB_ENV
+
           echo "CC=${LLVM_PREFIX}/bin/clang" >> $GITHUB_ENV
           echo "CXX=${LLVM_PREFIX}/bin/clang++" >> $GITHUB_ENV
-          
-          # Critical fix - set compiler flags to use LLVM's libc++ instead of system
-          echo "CXXFLAGS=-stdlib=libc++ -nostdinc++ -I${LLVM_PREFIX}/include/c++/v1 -I${LLVM_PREFIX}/include" >> $GITHUB_ENV
-          echo "LDFLAGS=-L${LLVM_PREFIX}/lib -Wl,-rpath,${LLVM_PREFIX}/lib" >> $GITHUB_ENV
-          
-          # Set other required paths
+          echo "LLVM_DIR=${LLVM_PREFIX}/lib/cmake/llvm" >> $GITHUB_ENV
           echo "PATH=${LLVM_PREFIX}/bin:$PATH" >> $GITHUB_ENV
-          echo "DYLD_LIBRARY_PATH=${LLVM_PREFIX}/lib:$DYLD_LIBRARY_PATH" >> $GITHUB_ENV
 
-      - name: Verify LLVM Installation
+      - name: Verify toolchain
         run: |
-          echo "Using Clang version:"
-          clang --version
-          echo "Using LLVM version:"
-          llvm-config --version
-          echo "LLVM CXX Flags:"
-          llvm-config --cxxflags
+          echo "CC = $CC"
+          echo "CXX = $CXX"
+          $CC --version
 
-      - name: Clean and Rebuild
+      - name: Configure CMake (Ubuntu)
+        if: runner.os == 'Linux'
         run: |
-          rm -rf build # Delete old build artifacts
-          
-          # Create a verbose CMake command with all needed flags
+          rm -rf build
           cmake -B build -S . -G Ninja \
             -DCMAKE_BUILD_TYPE=Debug \
-            -DCMAKE_OSX_ARCHITECTURES=${{ matrix.target }} \
-            -DCMAKE_CXX_FLAGS="${CXXFLAGS}" \
-            -DCMAKE_C_FLAGS="${CFLAGS}" \
-            -DCMAKE_EXE_LINKER_FLAGS="${LDFLAGS}" \
-            -DCMAKE_SHARED_LINKER_FLAGS="${LDFLAGS}" \
-            -DCMAKE_MODULE_LINKER_FLAGS="${LDFLAGS}"
-        env:
-          LLVM_DIR: ${{ env.LLVM_DIR }}
-          CC: ${{ env.CC }}
-          CXX: ${{ env.CXX }}
-          CXXFLAGS: ${{ env.CXXFLAGS }}
-          LDFLAGS: ${{ env.LDFLAGS }}
-          PATH: ${{ env.PATH }}
-          DYLD_LIBRARY_PATH: ${{ env.DYLD_LIBRARY_PATH }}
+            -DCMAKE_C_COMPILER="$CC" \
+            -DCMAKE_CXX_COMPILER="$CXX" \
+            -DCMAKE_CXX_STANDARD=17 \
+            -DCMAKE_CXX_STANDARD_REQUIRED=ON
 
-      - name: Debug Static Library Issues (if build fails)
-        if: failure()
+      - name: Configure CMake (macOS)
+        if: runner.os == 'macOS'
         run: |
-          file build/src/ir/libir_lib.a || echo "libir_lib.a not found"
-          file build/src/parser/libparser_lib.a || echo "libparser_lib.a not found"
-          nm -g build/src/ir/libir_lib.a || echo "No symbols in libir_lib.a"
-          nm -g build/src/parser/libparser_lib.a || echo "No symbols in libparser_lib.a"
+          rm -rf build
+          cmake -B build -S . -G Ninja \
+            -DCMAKE_BUILD_TYPE=Debug \
+            -DCMAKE_C_COMPILER="$CC" \
+            -DCMAKE_CXX_COMPILER="$CXX" \
+            -DCMAKE_AR="$LLVM_PREFIX/bin/llvm-ar" \
+            -DCMAKE_RANLIB="$LLVM_PREFIX/bin/llvm-ranlib" \
+            -DCMAKE_OSX_SYSROOT="$SDKROOT" \
+            -DCMAKE_OSX_DEPLOYMENT_TARGET=13.0 \
+            -DCMAKE_CXX_STANDARD=17 \
+            -DCMAKE_CXX_STANDARD_REQUIRED=ON
 
-      - name: Run Tests
+      - name: Verify archive tools (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          cmake -LA -N build | grep CMAKE_AR
+          cmake -LA -N build | grep CMAKE_RANLIB
+
+      - name: Build
+        run: |
+          cmake --build build --verbose
+
+      - name: Run tests
         run: |
           cd build
-          ninja run_all_tests
+          ctest --output-on-failure --verbose
