--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,17 @@ build/
 codes_86/
 _deps/
 *.dSYM/
+
+# LLVM generated files
+*.ll
+*.bc
+*.s
+
+# docs
+docs/html/
+
+# machine binaries
+.DS_Store
+
+# becnhmarks
+benchmarking/
